# ocr-correction-pipeline

./: .gitignore  README.md  install.bat  install.ps1  install.sh  pyproject.toml  start.bat  start.sh  test_input.txt
src/ocr_corrector/: __init__.py  __main__.py  bert_scanner.py  config.py  escalation.py  gpu_detect.py  llm_server.py  ocr_frontend.py  pdf_export.py  pipeline.py  qwen_judge.py  text_export.py  webui.py
tests/: test_e2e_download.py  test_guardrails.py
