[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ocr-corrector"
version = "0.1.0"
description = "BERT perplexity scan + Qwen LLM judgment pipeline for OCR error correction"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40,<5",
    "fugashi",
    "unidic-lite",
    "sentencepiece",
    "ollama",
    "protobuf",
]

[project.optional-dependencies]
webui = ["gradio>=4.0"]
ocr = ["ndlocr-lite"]
dev = ["pytest", "ruff"]

[project.scripts]
ocr-corrector = "ocr_corrector.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
